update editor content when deleting characters resolved

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
     --sidebar-title-h:2rem;
     --navbar-h:34px;
     --terminal-h:140px;
+    --terminal-title-h:30px;
 }
 body{
     background-color: #282c34;
