--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
     --navbar-h:34px;
     --terminal-h:140px;
     --terminal-title-h:30px;
+    --utilitybar-w:100px;
 }
 body{
     background-color: #282c34;
